--- a/src/UserAuth/userAuth.css
+++ b/src/UserAuth/userAuth.css
@@ -41,3 +41,15 @@ margin-top:15vh;
 .nav-link.active{
     background-color: #deaab9 !important;
 }
+.btn-sign{
+    background-color: #0d6efd;
+    color: white;
+    font-style: inherit;
+    font-size: 1rem;
+    padding: 0.375rem 0.75rem;
+    font-weight: 400;
+    line-height: 1.5;
+    width: 100%;
+    border: #0d6efd;
+    border-radius: 6px;
+}
